deploy/pipeline-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pipeline-${CICD_EXECUTION_SEQUENCE}
