deploy/pipeline-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: pipeline
      version: ${CICD_EXECUTION_SEQUENCE}
  name: pipeline-${CICD_EXECUTION_SEQUENCE}
  namespace: pipelines-${CICD_EXECUTION_SEQUENCE}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
